<resources>
    <string name="app_name">UsedBooks</string>
    <string name="inserire_il_titolo">Inserire il titolo.</string>
    <string name="autore">Autore</string>
    <string name="inserisci_il_nome_dell_autore">Inserisci nome autore.</string>
    <string name="titolo">Titolo</string>
    <string name="vendi">Vendi</string>
    <string name="prezzo">Prezzo</string>
    <string name="inserisci_il_prezzo">Inserisci il prezzo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="insert_password">Inserire password</string>
    <string name="insert_email">Inserire email</string>
    <string name="login">Login</string>
    <string name="registration">Registrati</string>
</resources>